Add initial support for pfsfuse dependencies

--- a/mingw32_meson.ini
+++ b/mingw32_meson.ini
@@ -7,6 +7,8 @@ strip = 'i686-w64-mingw32-strip'
 windres = 'i686-w64-mingw32-windres'
 objcopy = 'i686-w64-mingw32-objcopy'
 # exe_wrapper = '/usr/local/bin/wine'
+pkgconfig = 'pkg-config'
+cmake = 'cmake'
 
 [host_machine]
 system = 'windows'
